--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://tybeard.com/"
+baseURL = "https://tybearder.com/"
 languageCode = "en-us"
 title = "Tybeard"
 author = "Andrea Bredice"
