added disableKind to config.toml

--- a/config.toml
+++ b/config.toml
@@ -9,3 +9,4 @@ pygmentsCodefences = true
 pygmentsCodefencesGuessSyntax = true
 pygmentsUseClasses=true
 pygmentsOptions = "linenos=table"
+disableKinds = ["page", "home", "section", "taxonomyTerm"]
