--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "/"
+baseURL = "https://tybearder.com"
 languageCode = "en-us"
 title = "Tybeard"
 author = "Andrea Bredice"
@@ -10,3 +10,5 @@ pygmentsCodefencesGuessSyntax = true
 pygmentsUseClasses=true
 pygmentsOptions = "linenos=table"
 disableKinds = ["page", "home", "section", "taxonomyTerm"]
+
+[params]
